# media-automation

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SECURITY.md  TagExplicitLyrics.py  explicit_config.example.toml
.claude/: release.toml
.github/: copilot-instructions.md  dependabot.yml
.github/instructions/: code-review.instructions.md  rust-error-handling.instructions.md  rust-tests.instructions.md
.github/workflows/: ci.yml  codeql.yml  copilot-re-review.yml  dependabot-auto-approve.yml  dependabot-merge.yml  release.yml
SetMusicParentalRating/: README.md  SetMusicParentalRating.py  explicit_config.example.toml
TagExplicitLyrics/: README.md  TagExplicitLyrics.py  explicit_config.example.toml
docs/specs/: age-rater-spec.md
docs/superpowers/plans/: 2026-03-14-milestone2-server-scoping.md  2026-03-14-server-api-client.md  2026-03-15-rating-orchestration.md
docs/superpowers/specs/: 2026-03-13-api-driven-refactor-design.md  2026-03-14-config-and-cli-design.md  2026-03-14-server-api-client-design.md  2026-03-15-rating-orchestration-design.md  2026-03-15-server-api-client-design.md
rabsody/: Cargo.toml  README.md  build.rs
rabsody/src/: api.rs  auth.rs  cache.rs  config.rs  embed.rs  error.rs  items.rs  main.rs  metadata.rs  tasks.rs
rabsody/src/harness/: backup.rs  ledger.rs  mod.rs  preview.rs
scripts/: broken.txt.example  clean-broken-albums.sh  findage.sh  fix-unsynced-lrc.sh  gate.sh
smpr/: Cargo.toml  README.md  build.rs
smpr/src/: config.rs  detection.rs  lib.rs  main.rs  rating.rs  report.rs  server.rs  util.rs
smpr/src/config/: defaults.rs  mod.rs  tests.rs
smpr/src/enrich/: lock.rs  mod.rs
smpr/src/rating/: action.rs  mod.rs  scope.rs  tests.rs
smpr/src/server/: error.rs  mod.rs  types.rs
smpr/src/server/tests/: integration.rs  mod.rs  unit.rs
smpr/src/tui/: action_tests.rs  app.rs  app_tests.rs  io.rs  io_tests.rs  keymap.rs  mod.rs  render.rs  render_tests.rs
smpr/src/tui/widgets/: force_tree.rs  genre_picker.rs  mod.rs  popup.rs  preferences.rs  server_list.rs  sidebar.rs  text_input.rs
smpr/src/wizard/: auth.rs  detection.rs  library.rs  mod.rs  output.rs  preferences.rs  server.rs
tools/: ImportLidarrManual.py  emby_bif_audit.py
tools/lidarr/: ImportLidarrManual.py  README.md  test_import_deps.py
