[package]
name = "rabsody"
# Placeholder: the real version is derived from the git tag at build time by
# build.rs (rabsody-v* -> RABSODY_VERSION). Do not hand-edit; tag to release.
version = "0.0.0"
edition = "2024"
description = "RABSody - a Rust CLI for curating an Audiobookshelf (ABS) library"
license = "BSD-2-Clause"
rust-version = "1.94"

[[bin]]
name = "rabsody"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
csv = "1"
dirs = "6"
env_logger = "0.11"
log = "0.4"
percent-encoding = "2"
regex = "1"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
ureq = { version = "3", features = ["json"] }

[profile.release]
strip = true
lto = true
opt-level = "z"
