[package]
name = "smpr"
version = "0.1.0"
edition = "2024"
description = "Fetch lyrics from Emby/Jellyfin, detect explicit content, set parental ratings"
license = "MIT"
rust-version = "1.94"

[[bin]]
name = "smpr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
csv = "1"
dirs = "6"
dotenvy = "0.15"
env_logger = "0.11"
hostname = "0.4.2"
inquire = "0.7"
log = "0.4.29"
ratatui = "0.30"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
ureq = { version = "3", features = ["json"] }
uuid = { version = "1.22.0", features = ["v4"] }

[profile.release]
strip = true
lto = true
opt-level = "z"  # optimize for size

[dev-dependencies]
tempfile = "3.27.0"
