[package]
name = "smpr"
# Placeholder: the real version is derived from the git tag at build time by
# build.rs (smpr-v* -> SMPR_VERSION). Do not hand-edit; tag to release.
version = "0.0.0"
edition = "2024"
description = "Fetch lyrics from Emby/Jellyfin, detect explicit content, set parental ratings"
license = "MIT"
rust-version = "1.97"

[lib]
name = "smpr"
path = "src/lib.rs"

[[bin]]
name = "smpr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
csv = "1"
dirs = "6"
dotenvy = "0.15"
env_logger = "0.11"
hostname = "0.4.2"
inquire = "0.9"
log = "0.4.32"
ratatui = "0.30"
regex = "1"
# `bundled` compiles SQLite from source, which the static musl release target needs.
# The exact pin dates from rust-version = 1.94, where libsqlite3-sys >= 0.32 failed to
# build because its build script used the then-unstable `cfg_select` macro. That macro
# is stable as of the 1.97 toolchain this crate now targets (verified: rusqlite 0.40 /
# libsqlite3-sys 0.38.1 compiles clean on 1.97), so the constraint is lifted and the
# exact pin can be relaxed -- see the open rusqlite 0.40 bump.
rusqlite = { version = "=0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11.1"
tempfile = "3.27.0"
toml = "1.1"
unicode-width = "0.2.2"
ureq = { version = "3", features = ["json"] }
uuid = { version = "1.23.2", features = ["v4"] }

[profile.release]
strip = true
lto = true
opt-level = "z"  # optimize for size

[dev-dependencies]
proptest = "1"
tempfile = "3.27.0"
